Using correct alignment

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.module.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   overflow: hidden;
   gap: 1ch;
-  padding: 0.25rem 0.5em;
+  padding: 0.25rem 0.5rem;
   cursor: pointer;
 }
 .Point[data-test-state="paused"] {
